# OpenAI_Agents_SDK_class_02

./: .env  .gitignore  AI_Agents_Development_to_Deployment_&_Introduction_to_DACA_Design_Pattern_class07.ipynb  AI_and_Cloud_Approaches_for_Agentic_Application_OpenAI_Agetns_SDK_Basics_class11.ipynb  AgentLoop_Tool_Call_Handsoff_Memory_Guardrails_class05.ipynb  Agents_SDK_Hosted_Tools_(Web_Search,_File_Search,_Computer_use),_Streaming,_Agent_as_Tool_class14.ipynb  Class_16_OpenAI_Agents_SDK_Input_Guardrails_and_Output_Guardrails_How_to_implement_Guardrails.ipynb  Conceptualizing_an_Email_Agent_Mind_Map_Brainstorm_class09.ipynb  Core_Principles_of_DACA_OpenAI_Agents_SK_(Agent_Loop,_Agent_with_Tools,_Handoffs)_class13.ipynb  Dataclasses,Generics,Callable_class04.ipynb  Google_A2A_Agent_to_Agent_Communication_&_Development,_Protoyping,_Production_using_DACA_Class08.ipynb  Inflection_Point_and_Introduction_of_MCPs_class06.ipynb  OpenAI_Agents_SDK_Streaming,_Local_Context_and_Agent_LLM_Context_class15.ipynb  OpenAI_Agents_SDK_class02.ipynb  OpenAI_SDK_class03_Python_Dataclasses.ipynb  Unleash_AI_Agents_at_Scale_Cloud_Native_Strategies_&_Real_World_Use_Cases_Explored_class09.ipynb  Unleash_AI_Agents_at_Scale_Cloud_Native_Strategies_&_Real_World_Use_Cases_Explored_class10.ipynb  Use_LiteLLM_with_OpenAI_Agent_SDK,_Basic_Agent,_Agent_with_Tool,_Agent_Loop,_Handoffs_Class_12.ipynb  pyproject.toml
src/openai_agents_sdk_class_02/: __init__.py  hello.py
